--- a/Java Project RILA13/src/Admin/ManageForm.fxml
+++ b/Java Project RILA13/src/Admin/ManageForm.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -101,24 +102,44 @@
                   </Group>
                   <Group fx:id="grpMovies">
                      <children>
-                        <TabPane fx:id="tabPaneMovie" prefHeight="570.0" prefWidth="612.0" tabClosingPolicy="UNAVAILABLE" tabMinWidth="135.0">
+                        <TabPane fx:id="tabPaneMovie" prefHeight="570.0" prefWidth="612.0" tabClosingPolicy="UNAVAILABLE" tabMinWidth="135.0" visible="false">
                           <tabs>
-                            <Tab text="Movies">
+                            <Tab fx:id="tabMovie" text="Movies">
                               <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="391.0" prefWidth="367.0" />
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="391.0" prefWidth="367.0">
+                                       <children>
+                                          <ListView fx:id="listviewMovie" layoutX="14.0" layoutY="20.0" onMouseClicked="#selectMovie" prefHeight="444.0" prefWidth="200.0" />
+                                          <ImageView fx:id="inMovieImage" fitHeight="255.0" fitWidth="180.0" layoutX="230.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
+                                          <Label layoutX="239.0" layoutY="327.0" text="Description :" />
+                                          <TextArea fx:id="inMovieDescription" editable="false" layoutX="230.0" layoutY="353.0" prefHeight="170.0" prefWidth="359.0" />
+                                          <Label layoutX="420.0" layoutY="35.0" text="Name :" />
+                                          <Label layoutX="420.0" layoutY="86.0" text="Duration :" />
+                                          <Label layoutX="420.0" layoutY="142.0" text="Format :" />
+                                          <Label layoutX="420.0" layoutY="193.0" text="Genre :" />
+                                          <Label layoutX="420.0" layoutY="250.0" text="Producer :" />
+                                          <Label layoutX="421.0" layoutY="298.0" text="Release Date :" />
+                                          <TextField fx:id="inMovieName" editable="false" layoutX="420.0" layoutY="52.0" />
+                                          <TextField fx:id="inMovieDuration" editable="false" layoutX="420.0" layoutY="103.0" />
+                                          <TextField fx:id="inMovieFormat" editable="false" layoutX="420.0" layoutY="159.0" />
+                                          <TextField fx:id="inMovieGenre" editable="false" layoutX="420.0" layoutY="210.0" />
+                                          <TextField fx:id="inMovieProducer" editable="false" layoutX="420.0" layoutY="267.0" />
+                                          <TextField fx:id="inMovieReleasedate" editable="false" layoutX="420.0" layoutY="315.0" />
+                                          <Button fx:id="btnTheMovieDBUpdate" layoutX="14.0" layoutY="472.0" mnemonicParsing="false" onAction="#StartTheMovieDB" prefHeight="55.0" prefWidth="199.0" text="Update From The Movie DB" />
+                                       </children>
+                                    </AnchorPane>
                               </content>
                             </Tab>
-                            <Tab text="Filmshow">
+                            <Tab fx:id="tabFilmshow" text="Filmshow">
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                               </content>
                             </Tab>
-                              <Tab text="Format">
+                              <Tab fx:id="tabFormat" text="Format">
                                 <content>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                                 </content>
                               </Tab>
-                              <Tab text="Booking">
+                              <Tab fx:id="tabBooking" text="Booking">
                                 <content>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                                 </content>
