--- a/Java Project RILA13/src/Admin/ManageForm.fxml
+++ b/Java Project RILA13/src/Admin/ManageForm.fxml
@@ -16,12 +16,6 @@
               <MenuItem fx:id="menuClose" mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Options">
-            <items>
-                  <Menu mnemonicParsing="false" text="Cinema" />
-              <MenuItem fx:id="menuChangeCinema" mnemonicParsing="false" text="Change Cinema" />
-            </items>
-          </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
@@ -33,10 +27,9 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="573.0" prefWidth="171.0">
                <children>
-                  <Button fx:id="btnCinema" layoutX="44.0" layoutY="118.0" mnemonicParsing="false" onAction="#displayTabCinemaAll" prefHeight="25.0" prefWidth="93.0" text="Cinema" />
-                  <Button fx:id="btnMovies" layoutX="44.0" layoutY="161.0" mnemonicParsing="false" onAction="#displayTabMoviesAll" prefHeight="25.0" prefWidth="93.0" text="Movies" />
-                  <Button fx:id="btnUsers" layoutX="44.0" layoutY="201.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="93.0" text="Users" />
-                  <Button layoutX="44.0" layoutY="243.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="93.0" text="Button" />
+                  <Button fx:id="btnCinema" layoutX="30.0" layoutY="80.0" mnemonicParsing="false" onAction="#displayTabCinemaAll" prefHeight="45.0" prefWidth="125.0" text="Cinema" />
+                  <Button fx:id="btnMovies" layoutX="30.0" layoutY="150.0" mnemonicParsing="false" onAction="#displayTabMoviesAll" prefHeight="45.0" prefWidth="125.0" text="Movies" />
+                  <Button fx:id="btnUsers" layoutX="30.0" layoutY="220.0" mnemonicParsing="false" onAction="#displayTabUsersAll" prefHeight="45.0" prefWidth="125.0" text="Users" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
@@ -100,7 +93,7 @@
                         </TabPane>
                      </children>
                   </Group>
-                  <Group fx:id="grpMovies">
+                  <Group fx:id="grpMovies" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <TabPane fx:id="tabPaneMovie" prefHeight="570.0" prefWidth="612.0" tabClosingPolicy="UNAVAILABLE" tabMinWidth="135.0" visible="false">
                           <tabs>
@@ -147,8 +140,32 @@
                           </tabs>
                         </TabPane>
                      </children></Group>
-                  <Group fx:id="grpUsers" layoutX="239.0" layoutY="230.0" visible="false" />
-                  <Group layoutX="211.0" layoutY="194.0" visible="false" />
+                  <Group fx:id="grpUsers" layoutX="14.0" layoutY="8.0" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <TabPane fx:id="tabPaneUsers" prefHeight="570.0" prefWidth="612.0" tabClosingPolicy="UNAVAILABLE" tabMinWidth="150.0" visible="false">
+                          <tabs>
+                            <Tab fx:id="tabUsers" text="Users">
+                                 <content>
+                                    <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                                       <children>
+                                          <ListView fx:id="listviewUsers" layoutX="14.0" layoutY="20.0" onMouseClicked="#selectUser" prefHeight="503.0" prefWidth="200.0" />
+                                          <Label layoutX="270.0" layoutY="99.0" prefHeight="17.0" prefWidth="46.0" text="Name :" />
+                                          <Label layoutX="270.0" layoutY="151.0" prefHeight="17.0" prefWidth="46.0" text="Login :" />
+                                          <Label layoutX="270.0" layoutY="203.0" prefHeight="17.0" prefWidth="70.0" text="Password :" />
+                                          <TextField fx:id="inUsersName" layoutX="340.0" layoutY="95.0" prefHeight="25.0" prefWidth="194.0" />
+                                          <TextField fx:id="inUsersLogin" layoutX="340.0" layoutY="147.0" prefHeight="25.0" prefWidth="194.0" />
+                                          <TextField fx:id="inUsersPassword" layoutX="340.0" layoutY="199.0" prefHeight="25.0" prefWidth="194.0" />
+                                          <TextField fx:id="inUsersId" layoutX="352.0" layoutY="42.0" visible="false" />
+                                          <Button fx:id="btnUsersAdd" layoutX="269.0" layoutY="335.0" mnemonicParsing="false" onAction="#addUsers" prefHeight="25.0" prefWidth="80.0" text="Add" />
+                                          <Button fx:id="btnUsersModify" layoutX="363.0" layoutY="335.0" mnemonicParsing="false" onAction="#modifyUsers" prefHeight="25.0" prefWidth="80.0" text="Modify" />
+                                          <Button fx:id="btnUsersDelete" layoutX="460.0" layoutY="335.0" mnemonicParsing="false" onAction="#deleteUsers" prefHeight="25.0" prefWidth="80.0" text="Delete" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </Tab>
+                          </tabs>
+                        </TabPane>
+                     </children></Group>
                </children>
             </AnchorPane>
         </items>
