--- a/Java Project RILA13/src/Admin/ManageForm.fxml
+++ b/Java Project RILA13/src/Admin/ManageForm.fxml
@@ -129,12 +129,23 @@
                             </Tab>
                               <Tab fx:id="tabFormat" text="Format">
                                 <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                </content>
-                              </Tab>
-                              <Tab fx:id="tabBooking" text="Booking">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <ListView fx:id="listviewFormat" layoutX="14.0" layoutY="20.0" prefHeight="230.0" prefWidth="200.0" />
+                                          <Label layoutX="270.0" layoutY="47.0" prefHeight="17.0" prefWidth="46.0" text="Label :" />
+                                          <Label layoutX="270.0" layoutY="83.0" prefHeight="17.0" prefWidth="60.0" text="Language :" />
+                                          <Label layoutX="270.0" layoutY="120.0" prefHeight="17.0" text="Description :" />
+                                          <TextField fx:id="inFormatLabel" layoutX="360.0" layoutY="43.0" />
+                                          <TextField fx:id="inFormatLanguage" layoutX="360.0" layoutY="79.0" />
+                                          <TextArea fx:id="inFormatDescription" layoutX="269.0" layoutY="147.0" prefHeight="110.0" prefWidth="304.0" />
+                                          <Button fx:id="btnFormatAdd" layoutX="276.0" layoutY="271.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Add" />
+                                          <Button fx:id="btnFormatModify" disable="true" layoutX="370.0" layoutY="271.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Modify" />
+                                          <Button fx:id="btnFormatDelete" disable="true" layoutX="469.0" layoutY="271.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Delete" />
+                                          <TextField fx:id="inFormatId" layoutX="360.0" layoutY="30.0" visible="false" />
+                                          <Label layoutX="20.0" layoutY="275.0" text="Linked Movie :" />
+                                          <ListView fx:id="listviewFormatMovie" layoutX="14.0" layoutY="314.0" prefHeight="200.0" prefWidth="264.0" />
+                                          <ImageView fx:id="imageFormatMovie" fitHeight="200.0" fitWidth="166.0" layoutX="295.0" layoutY="314.0" pickOnBounds="true" preserveRatio="true" />
+                                       </children></AnchorPane>
                                 </content>
                               </Tab>
                           </tabs>
@@ -157,8 +168,8 @@
                                           <TextField fx:id="inUsersPassword" layoutX="340.0" layoutY="199.0" prefHeight="25.0" prefWidth="194.0" />
                                           <TextField fx:id="inUsersId" layoutX="352.0" layoutY="42.0" visible="false" />
                                           <Button fx:id="btnUsersAdd" layoutX="269.0" layoutY="335.0" mnemonicParsing="false" onAction="#addUsers" prefHeight="25.0" prefWidth="80.0" text="Add" />
-                                          <Button fx:id="btnUsersModify" layoutX="363.0" layoutY="335.0" mnemonicParsing="false" onAction="#modifyUsers" prefHeight="25.0" prefWidth="80.0" text="Modify" />
-                                          <Button fx:id="btnUsersDelete" layoutX="460.0" layoutY="335.0" mnemonicParsing="false" onAction="#deleteUsers" prefHeight="25.0" prefWidth="80.0" text="Delete" />
+                                          <Button fx:id="btnUsersModify" disable="true" layoutX="363.0" layoutY="335.0" mnemonicParsing="false" onAction="#modifyUsers" prefHeight="25.0" prefWidth="80.0" text="Modify" />
+                                          <Button fx:id="btnUsersDelete" disable="true" layoutX="460.0" layoutY="335.0" mnemonicParsing="false" onAction="#deleteUsers" prefHeight="25.0" prefWidth="80.0" text="Delete" />
                                        </children>
                                     </AnchorPane>
                                  </content>
